# api-python-interview-seedtag

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: workflow.yaml
app/: main.py
app/core/: APILayer.py
app/events/: event_handlers.py
app/exception/: __init__.py  _exception.py
app/routers/: astromech.py  pytorch.py  sklearn.py
app/schema/: __init__.py  _schema.py
tests/: test_ok.py
